--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "gati_battleships_2",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Simple multi-player BattleShip Game built for Gati's Intership with SAIL",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "gati-aher",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
     "socket.io": "^2.1.1"
+  },
+  "engines": {
+    "node": "8.11.3"
   }
 }
